--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
         <div class="col-8 mt-4">
             <div class="card text-center">
                 <div class="card-header">
-                    by Jacob
+                    by <%= @article.user.username %>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title"><%= @article.title %></h5>
